--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,21 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
+# Vite
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
